adding build types Release and Debug to CMakeLists

--- a/solver-proxy/CMakeLists.txt
+++ b/solver-proxy/CMakeLists.txt
@@ -3,11 +3,11 @@ project("SATSolverProxy")                                      # Create project 
 
 set(CMAKE_CXX_STANDARD 11)
 
-#set (EXTRA_OPTIONS "-O3")
-set (EXTRA_OPTIONS "-g -Wall -Wextra")
+set (EXTRA_OPTIONS "-O3")
+#set (EXTRA_OPTIONS "-g -Wall -Wextra")
 
-set(CMAKE_BUILD_TYPE "Debug")                          #Possible values are empty, Debug, Release, RelWithDebInfo and MinSizeRel.
-#set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE "Debug")                          #Possible values are empty, Debug, Release, RelWithDebInfo and MinSizeRel.
+set(CMAKE_BUILD_TYPE Release)
 
 # Set the output folder where your program will be created
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
