--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "VeriPB_Prooflogger"]
 	path = VeriPB_Prooflogger
 	url = git@github.com:DietVds/VeriPB_Prooflogger.git
+[submodule "ipasir"]
+	path = ipasir
+	url = https://github.com/biotomas/ipasir.git
+[submodule "cadical"]
+	path = cadical
+	url = https://github.com/arminbiere/cadical.git
