--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "VeriPB_Prooflogger"]
 	path = VeriPB_Prooflogger
 	url = git@github.com:DietVds/VeriPB_Prooflogger.git
-[submodule "ipasir"]
-	path = ipasir
-	url = https://github.com/biotomas/ipasir.git
 [submodule "cadical"]
-	path = cadical
+	path = /solver-proxy/cadical
 	url = https://github.com/arminbiere/cadical.git
