--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,9 @@ endif()
 file(GLOB_RECURSE SOURCE_FILES 
   ${PROJECT_SOURCE_DIR}/Main.cpp
   ${PROJECT_SOURCE_DIR}/maxSAT/*.cpp
+  ${PROJECT_SOURCE_DIR}/VeriPB_Prooflogger/cadicalprooftracer.cpp
+  ${PROJECT_SOURCE_DIR}/VeriPB_Prooflogger/VeriPBProoflogger_Pacose.cc
+  ${PROJECT_SOURCE_DIR}/VeriPB_Prooflogger/MaxSATProoflogger_Pacose.cc
 )
 list(REMOVE_ITEM SOURCE_FILES "${PROJECT_SOURCE_DIR}/solver-proxy/Main.cpp")
 
@@ -46,6 +49,7 @@ include_directories(
     ${PROJECT_SOURCE_DIR}/Helper
     ${PROJECT_SOURCE_DIR}/maxSAT
     ${PROJECT_SOURCE_DIR}/maxSAT/DGPW
+    ${PROJECT_SOURCE_DIR}/VeriPB_ProofLogger
 )
 
 # Libraries
