--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,9 @@ file(GLOB SOURCE_FILES
   "${PROJECT_SOURCE_DIR}/Main.cpp"
   "${PROJECT_SOURCE_DIR}/maxSAT/*.cpp"
   "${PROJECT_SOURCE_DIR}/maxSAT/DGPW/*.cpp"
+  "${PROJECT_SOURCE_DIR}/VeriPB_Prooflogger/VeriPBProoflogger_Pacose.cc"
+  "${PROJECT_SOURCE_DIR}/VeriPB_Prooflogger/MaxSATProoflogger_Pacose.cc"
+  "${PROJECT_SOURCE_DIR}/VeriPB_Prooflogger/cadicalprooftracer.cpp"
 )
 add_executable(Pacose ${SOURCE_FILES})
 target_link_libraries(Pacose PRIVATE 
