removed glucose, added cadical competition mode for release compilation

--- a/solver-proxy/CMakeLists.txt
+++ b/solver-proxy/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(
 
 set(LIB_SOURCE_FILES
     SATSolverProxy.cpp
-    Glucose421SolverProxy.cpp
+    # Glucose421SolverProxy.cpp
     #Glucose3SolverProxy.cpp
     # CryptoMiniSat5SolverProxy.cpp
     #AntomSolverProxy.cpp
@@ -24,12 +24,12 @@ add_library(solver-proxy-shared SHARED ${LIB_SOURCE_FILES})
 set_target_properties(solver-proxy-static PROPERTIES OUTPUT_NAME "SATSolverProxy")
 set_target_properties(solver-proxy-shared PROPERTIES OUTPUT_NAME "SATSolverProxy")
 
-add_custom_target(glucose-4.2.1-build
-    COMMAND mkdir -p build && cmake -S . -B build && make -C build -j 
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/glucose-4.2.1)
-add_library(glucose-4.2.1-static STATIC IMPORTED)
-set_target_properties(glucose-4.2.1-static PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/glucose-4.2.1/build/libglucose.a)
-add_dependencies(glucose-4.2.1-static glucose-4.2.1-build)
+# add_custom_target(glucose-4.2.1-build
+#     COMMAND mkdir -p build && cmake -S . -B build && make -C build -j 
+#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/glucose-4.2.1)
+# add_library(glucose-4.2.1-static STATIC IMPORTED)
+# set_target_properties(glucose-4.2.1-static PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/glucose-4.2.1/build/libglucose.a)
+# add_dependencies(glucose-4.2.1-static glucose-4.2.1-build)
 
 #target_include_directories(glucose-4.2.1-static INTERFACE
 #  ${PROJECT_SOURCE_DIR}/glucose-4.2.1/core
@@ -40,12 +40,20 @@ add_dependencies(glucose-4.2.1-static glucose-4.2.1-build)
 #)
 #add_library(glucose-3.0 STATIC IMPORTED)
 #set_target_properties(glucose-3.0 PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/glucose-3.0/core/libglucose-3.0_release.a)
-add_custom_target(cadical-build
-    #COMMAND mkdir -p build/cadical && cd build/cadical && ../../configure && make -j
-    #COMMAND ./configure --competition -O3 && make -j
-    # COMMAND CXXFLAGS=-fno-omit-frame-pointer ./configure && make -j
-    COMMAND make -j
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/cadical)
+
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    add_custom_target(cadical-build
+        COMMAND ./configure --competition -O3
+        COMMAND make -j
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/cadical)
+else()
+    add_custom_target(cadical-build
+        #COMMAND mkdir -p build/cadical && cd build/cadical && ../../configure && make -j
+        #COMMAND ./configure --competition -O3 && make -j
+        # COMMAND CXXFLAGS=-fno-omit-frame-pointer ./configure && make -j
+        COMMAND make -j
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/cadical)
+endif()
 add_library(cadical-static STATIC IMPORTED)
 set_target_properties(cadical-static PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/cadical/build/libcadical.a)
 add_dependencies(cadical-static cadical-build)
@@ -57,9 +65,9 @@ add_dependencies(cadical-static cadical-build)
 #add_library(cms STATIC IMPORTED)
 #set_target_properties(cms PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/CryptoMiniSAT/build/lib/libcryptominisat5.so)
 
-target_link_libraries(solver-proxy-static PRIVATE glucose-4.2.1-static cadical-static)
+target_link_libraries(solver-proxy-static PRIVATE cadical-static)
 IF(APPLE)
-    target_link_libraries(solver-proxy-shared PUBLIC glucose-4.2.1-static cadical-static)
+    target_link_libraries(solver-proxy-shared PUBLIC cadical-static)
 ENDIF(APPLE)
 
 add_executable(SATSolverProxy Main.cpp)
