new mode weight plus 1 for coarse and fine convergence and return codes are updated

--- a/solver-proxy/CMakeLists.txt
+++ b/solver-proxy/CMakeLists.txt
@@ -50,7 +50,7 @@ if(CMAKE_BUILD_TYPE STREQUAL "Release")
 else()
     add_custom_target(cadical-build
         #COMMAND mkdir -p build/cadical && cd build/cadical && ../../configure && make -j
-        COMMAND ./configure -O3 && make -j
+        # COMMAND ./configure -O3 && make -j
         # COMMAND CXXFLAGS=-fno-omit-frame-pointer ./configure && make -j
         COMMAND make -j
         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/cadical)
