--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "solver-proxy/cadical"]
 	path = solver-proxy/cadical
 	url = https://github.com/arminbiere/cadical.git
+[submodule "maxpre2"]
+	path = maxpre2
+	url = https://bitbucket.org/coreo-group/maxpre2.git
